k8s/flux/leachnet/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
spec:
  rules:
  - host: "flux-receiver.net.theleachfamily.me.uk"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
  - hosts:
    - "flux-receiver.net.theleachfamily.me.uk"
    secretName: flux-receiver
